handling logic errors