@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import org.example.coursemanagementsystem.dto.response.DashboardStats;
 import org.example.coursemanagementsystem.dto.response.UserBaseResponse;
 import org.example.coursemanagementsystem.entity.User;
+import org.example.coursemanagementsystem.exception.InvalidRoleException;
 import org.example.coursemanagementsystem.exception.UserNotFoundException;
 import org.example.coursemanagementsystem.mapper.UserMapper;
 import org.example.coursemanagementsystem.repository.StudentRepository;
@@ -15,10 +16,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class AdminServiceImpl implements AdminService {
 
     private final UserRepository userRepository;
@@ -28,12 +29,12 @@ public class AdminServiceImpl implements AdminService {
 
     @Override
     public DashboardStats getDashboardStats() {
-        long totalUsers = userRepository.count();
-        long activeUsers = userRepository.countByIsActiveTrue();
+        long totalUsers    = userRepository.count();
+        long activeUsers   = userRepository.countByIsActiveTrue();
         long inactiveUsers = totalUsers - activeUsers;
         long totalStudents = studentRepository.count();
         long totalTeachers = teacherRepository.count();
-        long totalAdmins = userRepository.countByRole(Role.ADMIN);
+        long totalAdmins   = userRepository.countByRole(Role.ADMIN);
 
         return DashboardStats.builder()
                 .totalUsers(totalUsers)
@@ -47,35 +48,36 @@ public class AdminServiceImpl implements AdminService {
 
     @Override
     public List<UserBaseResponse> getAllUsers() {
-        return userRepository.findAll()
-                .stream()
+        return userRepository.findAll().stream()
                 .map(userMapper::toBaseResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserBaseResponse> getActiveUsers() {
-        return userRepository.findByIsActiveTrue()
-                .stream()
+        return userRepository.findByIsActiveTrue().stream()
                 .map(userMapper::toBaseResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserBaseResponse> getInactiveUsers() {
-        return userRepository.findByIsActiveFalse()
-                .stream()
+        return userRepository.findByIsActiveFalse().stream()
                 .map(userMapper::toBaseResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserBaseResponse> getUsersByRole(String role) {
-        Role roleEnum = Role.valueOf(role.toUpperCase());
-        return userRepository.findByRole(roleEnum)
-                .stream()
+        Role roleEnum;
+        try {
+            roleEnum = Role.valueOf(role.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new InvalidRoleException("Yanlış rol: " + role);
+        }
+        return userRepository.findByRole(roleEnum).stream()
                 .map(userMapper::toBaseResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -83,9 +85,6 @@ public class AdminServiceImpl implements AdminService {
     public void deleteUser(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("İstifadəçi tapılmadı: " + userId));
-
-        // Əgər student və ya teacher əlaqəli obyektləri varsa, onları da silmək olar
-        // Burada sadəcə user-i silirik. Əlaqəli entity-lər cascade ilə silinə bilər.
         userRepository.delete(user);
     }
 
@@ -94,8 +93,8 @@ public class AdminServiceImpl implements AdminService {
     public void activateUser(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("İstifadəçi tapılmadı: " + userId));
-        user.setActive(true);
-        // save çağırmağa ehtiyac yoxdur, @Transactional avtomatik flush edir
+        user.setIsActive(true);
+        userRepository.save(user);
     }
 
     @Override
@@ -103,7 +102,8 @@ public class AdminServiceImpl implements AdminService {
     public void deactivateUser(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("İstifadəçi tapılmadı: " + userId));
-        user.setActive(false);
+        user.setIsActive(false);
+        userRepository.save(user);
     }
 
     @Override
@@ -112,7 +112,14 @@ public class AdminServiceImpl implements AdminService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("İstifadəçi tapılmadı: " + userId));
 
-        Role roleEnum = Role.valueOf(newRole.toUpperCase());
+        Role roleEnum;
+        try {
+            roleEnum = Role.valueOf(newRole.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new InvalidRoleException("Yanlış rol: " + newRole);
+        }
         user.setRole(roleEnum);
+        userRepository.save(user);
     }
 }
+
